add google signin popup, get the restaurant data signed in instead of anonymous

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "firestore": "expiration-tracker-276323"
+    "auth": "expiration-tracker-276323",
+    "web": "expiration-tracker-276323"
   }
 }
